tdf#162772 Crash in "Target in Document" in Hyperlink dialog

regression from
    commit a6ad198d097fb4a503c8d5831d484ff46721134b
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Sat Aug 17 13:19:54 2024 +0200
    tdf#158556 use more comphelper::ByteReader

Change-Id: I7343159d5e3ec7619ba95a98417fd3b4e25dbf6c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172906
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>